--- a/VRChat/05/1090005.html
+++ b/VRChat/05/1090005.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "I31m6UYOlSLxRCh5NSC9VyWHHi/xljQKLFQ6w9++U6Q="></script>
+    "N/YC+NP9DQCjZhW2Z53ykrm5e4K+dLTh7GVDmGm3v00="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドス　長ドス","description":"■VRchat等で使用することを想定して作られたドスです\n\n■ガバが目立ちます\n\n■鞘もおまけで付きます\n\n■ポリゴン数\n鞘：380\n本体：546\n\n■細かいことVRchat推奨　改造可　商用利用可　\n\n■禁止事項：自作発言（改造品含む）\n\n※本製品はドスと鞘のみです。右近ちゃんは付属しません。","url":"https://booth.pm/ja/items/1090005","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1090005/1c3dfc79-dd9a-4ee8-859a-32dbd5935482_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I31m6UYOlSLxRCh5NSC9VyWHHi/xljQKLFQ6w9++U6Q="></script>
+    nonce="N/YC+NP9DQCjZhW2Z53ykrm5e4K+dLTh7GVDmGm3v00="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -582,7 +582,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
